@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.Documents" type="Module" version="01.00.05">
+		<package name="R7.Documents" type="Module" version="01.00.06">
 			<friendlyName>R7.Documents</friendlyName>
 			<description>This module renders a list of documents, including links to browse or download the document. Documents includes an edit page, which allows authorized users to edit the information about the Documents (for example, a friendly title) stored in the SQL database. Module based on the classic DNN Documents module.</description>
 			<owner>
@@ -106,7 +106,7 @@
 						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.00.05</version>
+							<version>01.00.06</version>
 						</script>
 					</scripts>
 				</component>
